<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qenndrimm.android.musicalstructure.BluesActivity">


    <TextView
        android:text="@string/pop_rock_category"
        android:background="@android:color/holo_orange_light"
        style="@style/categories" />

    <TextView
        android:text="@string/song_1"
        style="@style/songs" />

    <TextView
        android:text="@string/song_2"
        style="@style/songs" />
    <TextView
        android:text="@string/song_3"
        style="@style/songs" />

    <Button
        android:id="@+id/backToCategories"
        android:text="@string/back_to_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>