<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.qenndrimm.android.musicalstructure.MainActivity">

    <TextView
        android:id="@+id/txtBlues"
        android:text="@string/blues"
        style="@style/categories" />

    <TextView
        android:id="@+id/txtClassical"
        android:text="@string/classical"
        style="@style/categories" />

    <TextView
        android:id="@+id/txtCountry"
        android:text="@string/country"
        style="@style/categories"/>

    <TextView
        android:id="@+id/txtPopRock"
        android:text="@string/pop_rock"
        style="@style/categories"/>
</LinearLayout>
